--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
-/target
+# Директории сборки
+target/
+**/*.rs.bk
+
+Cargo.lock
+Cargo.toml.orig
+
+.idea/
+.vscode/
+*.iml
+
+*.rs.bk
+*.dSYM/
+*.log
+*.out
+*.exe
+*.pdb
+*.obj
+
+*.swp
+*.swo
+*.bak
+*.tmp
+*.DS_Store
